# ENCODERS

./: .coveralls.yml  .gitignore  .travis.yml  README  README.eval  README.md  Vagrantfile  build_haggle.sh  execute.sh  pull-all  vagrant-plugins.sh
haggle/: .cproject  .gitignore  .ndkconfig  AUTHORS  Android.mk  CHECKLIST  COPYING  ChangeLog  INSTALL  Makefile.am  NOTICE  README  TODO  autotools.HOWTO  build_android.drexel.sh  build_android.sri.sh  build_ubuntu.sh  clean_android.sri.sh  conf-sqlite.sh  configure.ac  coverity-analyze.sh  coverity-submit.sh  dependencies_ubuntu.sh  log.txt  mkgitref  trycompile  valgrind.sh
haggle/android/: Makefile.am  README  install_haggle.sh
haggle/android (copy)/: .gitignore  Android.mk  clean_device.sh  make_install_package.sh  remount_dev.sh
haggle/android (copy)/Haggle/: AndroidManifest.xml  build.xml
haggle/android (copy)/LuckyMe/: Android.mk  AndroidManifest.xml  build.xml  proguard.cfg
haggle/android (copy)/PhotoShare/: Android.mk  AndroidManifest.xml
haggle/android (copy)/device-files/: tiwlan.ini
haggle/android (copy)/extlibs/: README
haggle/android/Haggle/: Android.mk  AndroidManifest.xml  Makefile.in  local.properties.in  log.txt
haggle/android/LuckyMe/: Makefile.in
haggle/android/PhotoShare/: AndroidManifest.xml  Makefile.in  README  build.xml
haggle/android/device-files/: adhoc.sh  sdcard_install.sh
haggle/android/extlibs/: build.sh
haggle/benchmark/: haggle-benchmark-analysis.pl  haggle-benchmark-plot.sh  run-benchmark.sh
haggle/doc/: CodeOverview.txt  CodeStyle.txt  Makefile.am  configdos.txt  events.txt  google-c-style.el  protocol.txt
haggle/extlibs/libxml2-2.6.31.obsolete/: Android.mk  catalog.c  config.h  libxml.h  nanoftp.c  nanohttp.c  pattern.c  runsuite.c  threads.c  trio.c  xmlmodule.c  xmlregexp.c  xmlschemastypes.c
haggle/extlibs/libxml2-2.9.0/: Android.mk  config.h  libxml-2.0-uninstalled.pc  libxml-2.0.pc  runsuite  runxmlconf  testAutomata  testC14N  testHTML  testModule  testReader  testRegexp  testRelax  testSAX  testSchemas  testThreads  testURI  testXPath  testapi  testchar  testdict  testlimits  xml2-config  xml2Conf.sh  xmlcatalog  xmllint
haggle/extlibs/openssl-0.9.8j/: Makefile.iphone  e_os.h
haggle/extlibs/sqlite-3.7.0.1/: Makefile.am  sqlite3.c
haggle/extlibs/sqlite-autoconf-3071400/: configure.ac
haggle/iphone/: README  iphone-crosscompile.sh
haggle/iphone/Haggle/: FlipsideView.xib  Info.plist  MainView.xib  MainWindow.xib  iphone_Prefix.pch  main.mm
haggle/macosx/Haggle.xcodeproj/: project.pbxproj
haggle/macosx/HagglePrint/: HagglePrint.h  HagglePrint.m  HagglePrint_Prefix.pch  main.m
haggle/macosx/HagglePut/: HagglePut_Prefix.pch  HaggleView.h  HaggleView.m  main.m
haggle/resources/: .config-udptcp-bcast.xml.swp  HaggleLogo.ai  config-1hopbf-nosql.xml  config-1hopbf.xml  config-caching.xml  config-coding.xml  config-db-mem-test-nosql.xml  config-db-mem-test.xml  config-energy-coding.xml  config-energy-fragmentation.xml  config-flood-direct-caching-coding-udptcp.xml  config-flood-direct-caching-udptcp.xml  config-flood-direct-caching-utility-coding-udptcp-bcast.xml  config-flood-direct-caching-utility-udptcp-bcast.xml  config-flood-direct-caching-utility-udptcp.xml  config-flood-direct-caching.xml  config-flood-direct-coding-fca.xml  config-flood-direct-coding-signing-fca.xml  config-flood-direct-coding-signing.xml  config-flood-direct-coding-udptcp-bcast.xml  config-flood-direct-coding-udptcp-bcastc.xml  config-flood-direct-coding-udptcp-bf8000.xml  config-flood-direct-coding-udptcp-encryption.xml  config-flood-direct-coding-udptcp-noforwarding-bf8000.xml  config-flood-direct-coding-udptcp-ucast.xml  config-flood-direct-coding-udptcp-ucastc.xml  config-flood-direct-coding-udptcp.xml  config-flood-direct-coding.xml  config-flood-direct-encryption.xml  config-flood-direct-fca.xml  config-flood-direct-fragmentation-coding-caching-udptcp.xml  config-flood-direct-fragmentation-coding-fca.xml  config-flood-direct-fragmentation-coding-signing.xml  config-flood-direct-fragmentation-coding-udptcp-bcast.xml  config-flood-direct-fragmentation-coding-udptcp-bcastc.xml  config-flood-direct-fragmentation-coding-udptcp-encryption.xml  config-flood-direct-fragmentation-coding-udptcp-ucast.xml  config-flood-direct-fragmentation-coding-udptcp-ucastc.xml  config-flood-direct-fragmentation-coding-udptcp.xml  config-flood-direct-fragmentation-coding.xml  (+70 more)
haggle/src/: Makefile.am
haggle/src/arphelper/: Android.mk  Makefile.am  arphelper  arphelper.c
haggle/src/bbs/: Makefile.am  databuf.h  hagglebbs.cpp  httpd.cpp  httpd.h  mini_base64.c  mini_base64.h
haggle/src/clitool/: Android.mk  Makefile.am  clitool.cpp
haggle/src/experimental/: Makefile.am  haggle-ipc.c  haggle-udp.c  haggle-udp.h
haggle/src/filedrop/: Makefile.am  filedrop.c  filedropMacOSX.c
haggle/src/hagglekernel/: Address.cpp  Address.h  Android.mk  ApplicationManager.cpp  ApplicationManager.h  Attribute.cpp  Attribute.h  BenchmarkManager.cpp  BenchmarkManager.h  Bloomfilter.cpp  Bloomfilter.h  CacheGlobalOptimizer.cpp  CacheGlobalOptimizer.h  CacheGlobalOptimizerFactory.cpp  CacheGlobalOptimizerFactory.h  CacheKnapsackOptimizer.cpp  CacheKnapsackOptimizer.h  CacheKnapsackOptimizerFactory.cpp  CacheKnapsackOptimizerFactory.h  CachePurger.cpp  CachePurger.h  CachePurgerAbsTTL.cpp  CachePurgerAbsTTL.h  CachePurgerFactory.cpp  CachePurgerFactory.h  CachePurgerParallel.cpp  CachePurgerParallel.h  CachePurgerRelTTL.cpp  CachePurgerRelTTL.h  CacheReplGlobalOptimizer.cpp  CacheReplGlobalOptimizer.h  CacheReplGlobalOptimizerFactory.cpp  CacheReplacement.cpp  CacheReplacement.h  CacheReplacementFactory.cpp  CacheReplacementFactory.h  CacheReplacementPriority.cpp  CacheReplacementPriority.h  CacheReplacementTotalOrder.cpp  CacheReplacementTotalOrder.h  (+286 more)
haggle/src/haggleobserver/: .gitignore  Android.mk  Makefile.am  docopt.c  haggleobserver.c
haggle/src/haggletest/: .gitignore  Android.mk  Makefile.am  (+4 more)
haggle/testsuite/: Makefile.am  hagglemain.cpp  hagglemain.h  testhlp.c  testhlp.h  testsuiteWindows.cpp
(+1702 files in other folders)
